[APEX-405] Fixes product specifications mismatch, specifications sort order, missing product images

--- a/config/campbell/default/migrate_plus.migration.campbell_products.yml
+++ b/config/campbell/default/migrate_plus.migration.campbell_products.yml
@@ -174,163 +174,161 @@ process:
     plugin: campbell_create_product_specifications
     source: remote_product_specifications
     allowed_attributes:
+      - ATT159
       - ATT539
+      - ForeignTradeCode
+      - Set
+      - ATT923
       - TradeSizeFractional
-      - ATT424
-      - ATT217
-      - ATT864
-      - ATT797
-      - ATT802
-      - ATT803
-      - ATT805
-      - ATT798
-      - ATT291
-      - TorqueValue
-      - ATT776
-      - ATT345
-      - ATT214
-      - ATT817
-      - ATT858
-      - ATT859
-      - Quik-AlloySlingHooks
-      - Quik-AlloySlingHookwithLatch
+      - ATT326
       - ATT205
-      - ATT770
-      - ATT460
+      - ATT200
+      - ATT440
+      - ATT146
+      - ATT147
+      - ATT439
+      - ATT187
       - ATT457
-      - ATT458
-      - ATT459
-      - ATT777
-      - ATT778
-      - ATT790
-      - ATT789
-      - ATT336
-      - ATT861
-      - ATT804
-      - ATT807
-      - ATT808
-      - ATT809
+      - ATT249
+      - ATT250
+      - ATT443
       - ATT748
       - ATT749
       - ATT750
+      - ATT746
       - ATT751
+      - ATT781
+      - ATT780
       - ATT688
       - ATT774
-      - ATT775
-      - ATT791
-      - ATT758
+      - ATT424
+      - ATT770
+      - ATT345
+      - ATT788
+      - ATT182
+      - ATT908
+      - ATT364
+      - ATT376
+      - ATT447
+      - ATT335
+      - ATT454
+      - ATT245
+      - ATT753
+      - ATT336
+      - ATT752
+      - ATT745
+      - ATT400
+      - ATT797
+      - ATT786
+      - ATT787
+      - ATT783
+      - ATT784
+      - ATT782
+      - MUSAICON
+      - ATT247
+      - ATT785
+      - ATT140
+      - ATT139
+      - ATT214
+      - ATT198
+      - ATT168
+      - ATT546
+      - ATT743
+      - ATT425
+      - ATT362
+      - ATT325
+      - ATT219
+      - ATT773
+      - ATT288
+      - ATT143
+      - ATT772
+      - ATT453
+      - ATT764
+      - ATT460
+      - ATT137
+      - ATT767
+      - ATT766
+      - ATT763
+      - ATT315
+      - ATT363
+      - ATT138
+      - ATT800
+      - ATT799
+      - ATT794
       - ATT792
       - ATT793
-      - ATT810
-      - ATT799
-      - ATT757
-      - ATT800
-      - ATT811
-      - ATT794
-      - ATT795
-      - ATT801
-      - ATT440
-      - ATT395
-      - ATT168
-      - ATT198
       - ATT274
-      - ATT249
-      - ATT250
-      - ATT545
-      - ATT546
-      - ATT405
-      - ATT447
-      - ATT442
-      - ATT326
-      - ATT923
-      - ATT200
-      - ATT145
-      - ATT425
-      - ATT137
-      - ATT138
-      - ATT315
-      - ATT212
-      - ATT363
-      - ATT364
-      - ATT767
-      - ATT453
-      - ATT288
-      - ATT325
-      - ATT773
-      - ATT362
-      - ATT766
-      - ATT764
-      - ATT143
-      - ATT763
-      - ATT376
-      - ATT147
-      - ATT146
-      - ATT187
-      - ATT786
-      - ATT785
-      - ATT784
-      - ATT783
-      - ATT782
-      - ATT349
-      - ATT335
-      - ATT779
-      - ATT329
-      - ATT400
-      - ATT250
-      - ATT752
-      - ATT908
-      - ATT781
-      - ATT320
-      - ATT780
-      - ATT245
-      - ATT454
-      - ATT753
-      - ATT247
-      - ATT182
-      - ATT745
-      - ATT788
-      - ATT139
-      - ATT140
-      - ATT746
-      - ATT621
-      - ATT330
-      - ATT754
-      - ATT222
-      - ATT225
-      - ATT460
-      - ATT918
-      - ATT327
-      - ATT123
-      - ATT121
-      - ATT286
-      - ATT113
-      - ATT157
-      - ATT937
-      - ATT154
-      - ATT865
-      - ATT857
-      - ATT219
-      - ATT916
-      - ATT917
-      - ATT862
+      - ATT883
+      - ATT775
+      - ATT791
+      - ATT856
+      - ATT877
+      - ATT878
+      - ATT806
+      - ATT801
+      - ATT876
+      - ATT758
+      - ATT807
+      - ATT808
+      - ATT809
+      - ATT811
+      - ATT810
+      - ATT805
+      - ATT795
+      - ATT802
+      - ATT803
+      - ATT804
+      - ATT861
+      - ATT217
+      - ATT790
+      - ATT859
+      - ATT858
+      - Quik-AlloySlingHooks
+      - Quik-AlloySlingHookwithLatch
+      - ATT874
+      - ATT875
       - ATT863
-      - ATT867
-      - ATT868
-      - ATT869
       - ATT870
       - ATT871
       - ATT872
       - ATT873
-      - ATT874
-      - ATT875
-      - ATT853
-      - ATT854
-      - ATT877
-      - ATT878
+      - ATT865
+      - ATT916
+      - ATT917
+      - ATT867
+      - ATT868
+      - ATT869
+      - ATT864
+      - ATT862
       - ATT855
-      - ATT856
-      - ATT806
-      - MUSAICON
+      - ATT854
+      - ATT853
+      - ATT860
+      - ATT458
+      - ATT459
+      - ATT757
+      - ATT789
+      - ATT778
+      - ATT777
+      - ATT291
+      - ATT154
+      - ATT155
+      - ATT222
+      - ATT621
+      - ATT756
+      - ATT225
+      - ATT754
+      - ATT937
+      - ATT442
+      - ATT545
+      - ATT515
+      - ATT405
+      - ATT734
+      - ATT744
+      - ATT212
+      - ATT378
+      - ATT395
+      - ATT145
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
