Apex-161: Add social share link in privacy policy page.

--- a/config/campbell/default/block.block.addthis.yml
+++ b/config/campbell/default/block.block.addthis.yml
@@ -22,4 +22,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/markets\r\n/markets/*\r\n/about-us\r\n/about-us/warranty\r\n/featured-products\r\n/featured-products/*\r\n/media-center/*\r\n/where-to-buy\r\n/warranty\r\n/return-policy\r\n/companion-brands"
+    pages: "/markets\r\n/markets/*\r\n/about-us\r\n/about-us/warranty\r\n/featured-products\r\n/featured-products/*\r\n/media-center/*\r\n/where-to-buy\r\n/warranty\r\n/return-policy\r\n/companion-brands\r\n/privacy-policy"
