APEX-416: Brand Timeline - Theming
This reverts commit 566936867686a9fdaa6745496c417d6506422606.

--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -68,3 +68,16 @@ product-detail:
     - core/drupal
     - core/jquery
     - core/jquery.once
+
+brand-timeline:
+  css:
+    theme:
+      //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css: { type: external, minified: true }
+  js:
+    //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js: { type: external, minified: true }
+    js/brand-timeline.js: {}
+
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
