[APEX-405] Product specification update

--- a/config/campbell/default/migrate_plus.migration.campbell_products.yml
+++ b/config/campbell/default/migrate_plus.migration.campbell_products.yml
@@ -202,6 +202,7 @@ process:
       - ATT688
       - ATT774
       - ATT424
+      - ATT379
       - ATT770
       - ATT345
       - ATT788
@@ -300,10 +301,12 @@ process:
       - ATT869
       - ATT864
       - ATT862
+      - ATT857
       - ATT855
       - ATT854
       - ATT853
       - ATT860
+      - ATT817
       - ATT458
       - ATT459
       - ATT757
@@ -311,8 +314,10 @@ process:
       - ATT778
       - ATT777
       - ATT291
+      - ATT776
       - ATT154
       - ATT155
+      - ATT113
       - ATT222
       - ATT621
       - ATT756
