Apex-378: Advance drilling enquiry form responsive issue fix.

--- a/docroot/themes/custom/atg/atg.libraries.yml
+++ b/docroot/themes/custom/atg/atg.libraries.yml
@@ -2,6 +2,7 @@ advanced-selector:
   css:
     theme:
       advanced-selector/css/styles.min.css: {}
+      advanced-selector/css/responsive.css: {}
   js:
     advanced-selector/js/vendor/jquery.validate.js: {}
     advanced-selector/js/scripts.min.js: {}
