--- a/config/campbell/default/block.block.searchform.yml
+++ b/config/campbell/default/block.block.searchform.yml
@@ -1,6 +1,6 @@
 uuid: d1c515b0-6d45-461d-b506-a5a9f88047f3
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search
@@ -9,7 +9,7 @@ dependencies:
 id: searchform
 theme: campbell
 region: search
-weight: 0
+weight: -32
 provider: null
 plugin: search_form_block
 settings:
