--- a/config/campbell/default/block.block.searchform_footer.yml
+++ b/config/campbell/default/block.block.searchform_footer.yml
@@ -1,6 +1,6 @@
 uuid: 8497538b-acb6-47c4-8dcf-452ce8ef9bea
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search
@@ -9,7 +9,7 @@ dependencies:
 id: searchform_footer
 theme: campbell
 region: footer_fifth
-weight: -7
+weight: -32
 provider: null
 plugin: search_form_block
 settings:
