--- a/config/campbell/default/core.entity_view_display.node.markets.search_index.yml
+++ b/config/campbell/default/core.entity_view_display.node.markets.search_index.yml
@@ -21,10 +21,11 @@ bundle: markets
 mode: search_index
 content:
   field_listing_image:
-    type: entity_reference_label
-    label: above
+    type: entity_reference_entity_view
+    label: hidden
     settings:
-      link: true
+      view_mode: embed
+      link: false
     third_party_settings: {  }
     weight: 0
     region: content
