--- a/config/campbell/default/core.entity_view_display.node.news.search_index.yml
+++ b/config/campbell/default/core.entity_view_display.node.news.search_index.yml
@@ -15,7 +15,7 @@ dependencies:
     - field.field.node.news.field_sub_heading
     - node.type.news
   module:
-    - text
+    - smart_trim
     - user
 id: node.news.search_index
 targetEntityType: node
@@ -23,9 +23,23 @@ bundle: news
 mode: search_index
 content:
   body:
-    type: text_default
+    type: smart_trim
     label: hidden
-    settings: {  }
+    settings:
+      trim_length: 350
+      trim_type: chars
+      trim_suffix: ...
+      wrap_output: false
+      wrap_class: trimmed
+      more_link: false
+      more_class: more-link
+      more_text: More
+      more_aria_label: 'Read more about [node:title]'
+      summary_handler: full
+      trim_options:
+        text: false
+        trim_zero: false
+        replace_tokens: false
     third_party_settings: {  }
     weight: 0
     region: content
