--- a/config/campbell/default/views.view.markers_map.yml
+++ b/config/campbell/default/views.view.markers_map.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_address
     - field.storage.node.field_location
     - field.storage.node.field_phone_number
+    - node.type.local_retailer
   module:
     - address
     - geolocation
@@ -240,12 +241,7 @@ display:
             field_identifier: ''
           exposed: false
           granularity: second
-      arguments:
-        field_address_country_code:
-          id: field_address_country_code
-          table: node__field_address
-          field: field_address_country_code
-          plugin_id: string
+      arguments: {  }
       filters:
         status:
           id: status
@@ -594,7 +590,7 @@ display:
           label_field: none
           marker_row_number: 0
           marker_icon_path: ''
-          even_empty: 0
+          even_empty: 1
           centre:
             client_location:
               enable: false
@@ -610,7 +606,7 @@ display:
                 east: ''
               map_center_id: fixed_boundaries
             fit_bounds:
-              enable: false
+              enable: true
               weight: 0
               settings:
                 reset_zoom: false
@@ -625,7 +621,7 @@ display:
                 longitude: null
               map_center_id: location_plugins
             first_row:
-              enable: true
+              enable: false
               weight: 0
               settings:
                 location_option_id: first_row
@@ -899,7 +895,7 @@ display:
             zoom: 10
             minZoom: 0
             maxZoom: 20
-            height: 400px
+            height: 650px
             width: 100%
             gestureHandling: auto
       row:
@@ -1198,6 +1194,48 @@ display:
             operator: ''
             operator_limit_selection: false
             operator_list: {  }
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          operator: in
+          value:
+            local_retailer: local_retailer
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
         field_address_postal_code:
           id: field_address_postal_code
           table: node__field_address
@@ -1621,48 +1659,7 @@ display:
             value: 'No result match.'
             format: basic_html
           tokenize: false
-      arguments:
-        field_address_country_code:
-          id: field_address_country_code
-          table: node__field_address
-          field: field_address_country_code
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: string
-          default_action: default
-          exception:
-            value: all
-            title_enable: false
-            title: All
-          title_enable: false
-          title: ''
-          default_argument_type: query_parameter
-          default_argument_options:
-            query_param: field_address_country_code
-            fallback: All
-            multiple: and
-          default_argument_skip_url: false
-          summary_options:
-            base_path: ''
-            count: true
-            override: false
-            items_per_page: 25
-          summary:
-            sort_order: asc
-            number_of_records: 0
-            format: default_summary
-          specify_validation: false
-          validate:
-            type: none
-            fail: 'not found'
-          validate_options: {  }
-          glossary: false
-          limit: 0
-          case: none
-          path_case: none
-          transform_dash: false
-          break_phrase: false
+      arguments: {  }
       filters:
         status:
           id: status
@@ -1677,6 +1674,48 @@ display:
             operator: ''
             operator_limit_selection: false
             operator_list: {  }
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          operator: in
+          value:
+            local_retailer: local_retailer
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
         field_address_postal_code:
           id: field_address_postal_code
           table: node__field_address
@@ -1809,7 +1848,7 @@ display:
             group_items: {  }
           country:
             country_source: filter
-            country_argument_id: ''
+            country_argument_id: field_address_country_code
             country_filter_id: field_address_country_code
             country_static_code: CA
         field_address_country_code:
