--- a/config/campbell/default/views.view.campbell_news.yml
+++ b/config/campbell/default/views.view.campbell_news.yml
@@ -412,16 +412,14 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
+        field_date_value:
+          id: field_date_value
+          table: node__field_date
+          field: field_date_value
           relationship: none
           group_type: group
           admin_label: ''
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+          plugin_id: datetime
           order: DESC
           expose:
             label: ''
@@ -818,7 +816,7 @@ display:
             more_link_path: ''
             strip_tags: true
             trim: true
-            preserve_tags: '<p><a>'
+            preserve_tags: '<p>'
             html: false
           element_type: ''
           element_class: ''
@@ -1107,11 +1105,11 @@ display:
         - 'config:field.storage.node.field_media'
   campbell_news_release:
     id: campbell_news_release
-    display_title: 'News Release'
+    display_title: 'News Releases'
     display_plugin: page
     position: 2
     display_options:
-      title: 'News Release'
+      title: 'News Releases'
       fields:
         field_date:
           id: field_date
@@ -1416,7 +1414,7 @@ display:
             more_link_path: ''
             strip_tags: true
             trim: true
-            preserve_tags: '<p><a>'
+            preserve_tags: '<p>'
             html: false
           element_type: ''
           element_class: ''
