APEX-113: Added to config ignore setting

--- a/config/clecotools/default/system.site.yml
+++ b/config/clecotools/default/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: en
 uuid: a8355cff-50d7-4081-b779-0b93605af02d
 name: Cleco
-mail: supriya.deshpande@srijan.net
+mail: no-reply@apextoolgroup.com
 slogan: ''
 page:
   403: ''
