Add stage-seo branch to Pipeline for Stage SEO changes deployment - Fix

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -104,7 +104,7 @@ pipelines:
       - step: *build-package
       - step:
           <<: *deploy-package
-          deployment: Staging SEO
+          deployment: Staging
     development:
       - step: *build-package
       - step:
