APS-62 Created sitemap for gw ct

--- a/composer.json
+++ b/composer.json
@@ -125,6 +125,7 @@
         "drupal/selective_better_exposed_filters": "^3.0@beta",
         "drupal/shield": "^1.6",
         "drupal/simple_sitemap": "^3.3",
+        "drupal/sitemap": "^2.0@beta",
         "drupal/smart_trim": "^2.0.0",
         "drupal/stage_file_proxy": "^1.0",
         "drupal/structure_sync": "^2.0",
