--- a/config/crescenttool/default/user.role.anonymous.yml
+++ b/config/crescenttool/default/user.role.anonymous.yml
@@ -9,6 +9,7 @@ dependencies:
     - media
     - node_view_permissions
     - search
+    - sitemap
     - system
 id: anonymous
 label: 'Anonymous user'
@@ -16,6 +17,7 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'access sitemap'
   - 'search content'
   - 'use text format restricted_html'
   - 'view any landing_page content'
