--- a/config/gearwrench/default/user.role.anonymous.yml
+++ b/config/gearwrench/default/user.role.anonymous.yml
@@ -9,6 +9,7 @@ dependencies:
     - media
     - node_view_permissions
     - search
+    - sitemap
     - system
 _core:
   default_config_hash: JrtDp8Iu4bDYXyEa3b0ibCCP9Lcj-px3BRoEOpg85_Q
@@ -18,6 +19,7 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'access sitemap'
   - 'search content'
   - 'use text format restricted_html'
   - 'view any landing_page content'
