--- a/config/gearwrench/default/user.role.authenticated.yml
+++ b/config/gearwrench/default/user.role.authenticated.yml
@@ -10,6 +10,7 @@ dependencies:
     - node_view_permissions
     - search
     - shortcut
+    - sitemap
     - system
 _core:
   default_config_hash: D2X2ptHvNtDj2MldPZaK433GfovwBCAxwj0kdd7JdXU
@@ -20,6 +21,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access shortcuts'
+  - 'access sitemap'
   - 'search content'
   - 'use text format limited_html'
   - 'view any styleguide content'
