--- a/config/crescenttool/default/user.role.authenticated.yml
+++ b/config/crescenttool/default/user.role.authenticated.yml
@@ -10,6 +10,7 @@ dependencies:
     - node_view_permissions
     - search
     - shortcut
+    - sitemap
     - system
 id: authenticated
 label: 'Authenticated user'
@@ -18,6 +19,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access shortcuts'
+  - 'access sitemap'
   - 'search content'
   - 'use text format limited_html'
   - 'view any styleguide content'
