--- a/config/clecotools/default/search_api.index.downloads_index.yml
+++ b/config/clecotools/default/search_api.index.downloads_index.yml
@@ -11,8 +11,8 @@ dependencies:
     - search_api.server.acquia_search_api_solr_server
   module:
     - search_api_solr
-    - search_api
     - media
+    - search_api
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -100,6 +100,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.media.field_type
+  name:
+    label: Name
+    datasource_id: 'entity:media'
+    property_path: name
+    type: string
+    dependencies:
+      module:
+        - media
 datasource_settings:
   'entity:media':
     bundles:
