APS-62 Created sitemap for gw ct - Fixes

--- a/config/crescenttool/local/core.extension.yml
+++ b/config/crescenttool/local/core.extension.yml
@@ -132,6 +132,7 @@ module:
   serialization: 0
   shortcut: 0
   simple_sitemap: 0
+  sitemap: 0
   smart_trim: 0
   stage_file_proxy: 0
   swiftmailer: 0
